模态框居中

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -253,7 +253,7 @@
 
 <!--删除所有密码-->
             <div class="modal fade" id="delAllPwdModal" tabindex="-1">
-                <div class="modal-dialog">
+                <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
 
                         <div class="modal-body">
@@ -271,7 +271,7 @@
             </div>
 
             <div class="modal fade" id="delAcctPwdModal" tabindex="-1">
-                <div class="modal-dialog">
+                <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
 
                         <div class="modal-body">
@@ -290,7 +290,7 @@
             </div>
 
             <div class="modal fade" id="delPwdModal" tabindex="-1">
-                <div class="modal-dialog">
+                <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-body">
                             <!--删除密码错误提示-->
@@ -309,7 +309,7 @@
 
             <!-- 添加密码模态框 -->
             <div class="modal fade" id="addPwdModal" tabindex="-1">
-                <div class="modal-dialog">
+                <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title">添加密码</h5>
@@ -361,7 +361,7 @@
             </div>
             <!-- 修改密码模态框 -->
             <div class="modal fade" id="editPwdModal" tabindex="-1">
-                <div class="modal-dialog">
+                <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title">修改密码</h5>
@@ -408,7 +408,7 @@
             </div>
             <!-- 修改账号模态框，不支持修改密码类型 -->
             <div class="modal fade" id="editAcctModal" tabindex="-1">
-                <div class="modal-dialog">
+                <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title">修改账号信息</h5>
@@ -452,7 +452,7 @@
 
 <!--            添加厂商模态框 -->
             <div class="modal fade"  id="addCompanyModal" tabindex="-1">
-                <div class="modal-dialog">
+                <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title">添加厂商信息</h5>
@@ -524,7 +524,7 @@
             <!-- 添加账号密码模态框 -->
 <!--            <div class="modal fade" id="myModal">-->
                 <div class="modal fade"  id="myModal" tabindex="-1">
-                    <div class="modal-dialog">
+                    <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title">添加账号密码信息</h5>
