--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1530,6 +1530,32 @@
         }
     }
 
+    // 页面超时退出
+    var lastTime = new Date().getTime();
+    var currentTime = new Date().getTime();
+    var timeOut = 5*60*1000; //设置超时时间： 5分
+
+    $(function(){
+        /* 鼠标移动事件 */
+        $(document).mouseover(function(){
+            lastTime = new Date().getTime(); //更新操作时间
+        });
+        /* 键盘事件 */
+        $(document).keydown(function(e){
+            lastTime = new Date().getTime(); //更新操作时间
+        });
+    });
+
+    function testTime(){
+
+        currentTime = new Date().getTime(); //更新当前时间
+        if(currentTime - lastTime > timeOut){ //判断是否超时
+            location.href='login.html?logout'
+        }
+    }
+
+    /* 定时器  间隔1分检测是否长时间未操作页面  */
+    window.setInterval(testTime, 60000);
 </script>
 
 </html>
