--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -44,9 +44,8 @@
 
 </style>
 <body  >
-<main  class="main">
-    <section class="py-xl bg-cover bg-size--cover">
-        <span class="mask bg-gradient-light alpha-8"></span>
+<main class="main">
+    <section class="py-xl bg-cover bg-size--cover bg-gradient-light">
         <div class="container d-flex align-items-center no-padding">
             <div class="col">
                 <div class="row justify-content-center">
