--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -45,9 +45,9 @@
 
 </style>
 <body  >
-<main  class="main">
-    <section class="py-xl bg-cover bg-size--cover">
-        <span class="mask bg-gradient-light alpha-12"></span>
+<main class="main">
+    <section class="py-xl bg-cover bg-size--cover bg-gradient-light">
+
         <div class="container d-flex align-items-center no-padding">
             <div class="col">
                 <div class="row justify-content-center">
